# py-repo-manager

./: LICENSE  Pipfile  README.rst  noxfile.py  off_MANIFEST.in  pyproject.toml  setup.cfg  setup.cfg_old  setup.py  tox.ini
.github/workflows/: basic_ci.yml
data/data_py_repo_manager/: schema.yaml
py-repo-manager/: __init__.py
src/py_repo_manager/: cli.py  command_line_interface.py  line_column_utils.py  schema.py  schema.yaml
tests/: test_cli.py
tests/test_py_repo_manager/: test_command_line_interface.py  test_line_column_utils.py  test_schema.py
tests/test_py_repo_manager/test_data/: broken_scratch.yaml  input_file.yaml
