[metadata]
name = py-repo-manager
version = 0.1.0
url = https://github.com/pgierz/py-repo-manager
license = MIT
author = Paul Gierz
author_email = pgierz@mac.com
description = A Python-based Repo Manager
long_description = file: README.rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
package_dir =
    = src
include_package_data = True
